--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Links -->
     <link rel="modulepreload" href="/pkg/package.js" as="script" type="text/javascript">
     <link rel="preload" href="/pkg/package_bg.wasm" as="fetch" type="application/wasm" crossorigin="anonymous">
-	<link rel="icon" href="/public/rc.ico">
+	<link rel="icon" href="/public/favicon.ico">
 	<link href="/public/style.css" rel="stylesheet">
 </head>
 
