--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 
 <head>
 	<!-- Primary Meta Tags -->
-	<title>xalkidiki</title>
-	<meta name="title" content="xalkidiki">
-	<meta name="description" content="xalkidiki">
+	<title>island_explore</title>
+	<meta name="title" content="island_explore">
+	<meta name="description" content="island_explore">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#30A2FF">
 	<!-- Charset -->
     <meta charset="utf-8">
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://xalkidiki-tuntematonsotilas.koyeb.app/">
-	<meta property="og:title" content="xalkidiki">
-	<meta property="og:description" content="xalkidiki">
+	<meta property="og:url" content="https://isl-tuntematonsotilas.koyeb.app/">
+	<meta property="og:title" content="island_explore">
+	<meta property="og:description" content="island_explore">
     <!-- Links -->
     <link rel="modulepreload" href="/pkg/package.js" as="script" type="text/javascript">
     <link rel="preload" href="/pkg/package_bg.wasm" as="fetch" type="application/wasm" crossorigin="anonymous">
