--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         import init from '/pkg/package.js';
         init('/pkg/package_bg.wasm');
     </script>
+	<a class="github" href="https://github.com/TuntematonSotilas/island_explore" target="_blank">
+		<img src="/public/github.png">
+	</a>
 </body>
 
 </html>
