--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<!-- Primary Meta Tags -->
-	<title>island_explore</title>
+	<title>Island Explore</title>
 	<meta name="title" content="island_explore">
 	<meta name="description" content="island_explore">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,6 +24,7 @@
 
 <body>
 	<div class="ctn">
+		<h1>Island Explore</h1>
 		<div id="loader" class="loader"></div>
 		<canvas id="game"></canvas>
 		<a class="github" href="https://github.com/TuntematonSotilas/island_explore" target="_blank">
